# Toshiba-SCARA

./: README.md
pick_and_place/: CMakeLists.txt  README.md  package.xml
pick_and_place/cfg/: pcd_data.cfg
pick_and_place/launch/: camera_openni2.launch
pick_and_place/msg/: object_coordinate.msg
pick_and_place/scripts/: robot_move.py
pick_and_place/src/: add_end_effactor_frame.cpp  add_robot_home_coordinate.cpp  pcl_filter.cpp  pcl_visualize.cpp  tf_pose.cpp
robot_communication/: CMakeLists.txt  package.xml
robot_communication/src/: receive_command.cpp  receive_command.cpp~  send_command.cpp  send_command.cpp~
robot_simulation/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  robot_simulartion_cmd
robot_simulation/URDF/: sr_scara_hx.gazebo  sr_scara_hx.xacro  toshiba_robot_r02.urdf
robot_simulation/meshes/: base_R01.stl  (+3 more)
sr_scara_hx_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml  setup.py
sr_scara_hx_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  sr_scara_hx.srdf
sr_scara_hx_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  sr_scara_hx_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
sr_scara_hx_moveit_config/scripts/: trajectory_demo.py
(+2 files in other folders)
